--- a/static/index.html
+++ b/static/index.html
@@ -270,7 +270,7 @@
   </div>
   <div class="body">
     <div class="plain">
-      <img src="http://atnd.org/event_images/0005/8986/302452512263294682_original.jpg?1404271953" />
+      <img src="/static/img/saito-hatebu-blow.gif" />
       <div class="block" id="description">
         <h2>開催概要</h2>
         <ul>
