--- a/static/index.html
+++ b/static/index.html
@@ -270,7 +270,7 @@
   </div>
   <div class="body">
     <div class="plain">
-      <img src="/static/img/saito-hatebu-blow.gif" />
+      <img src="/static/img/saito-hatebu-blow.gif" style="width:500px;height:auto;" />
       <div class="block" id="description">
         <h2>開催概要</h2>
         <ul>
