mod: destroy.js 読み忘れ修正

--- a/static/index.html
+++ b/static/index.html
@@ -620,6 +620,9 @@
   <script type="text/javascript" src="/static/js/youtube.js"></script>
   <script type="text/javascript" src="/static/js/jquery.easing.1.3.js"></script>
   <script type="text/javascript" src="/static/js/mouse.js"></script>
+  <script type="text/javascript" src="/static/js/jquery-css-transform.js"></script>
+  <script type="text/javascript" src="/static/js/jquery-animate-css-rotate-scale.js"></script>
+  <script type="text/javascript" src="/static/js/destroy.js"></script>
   <script type="text/javascript" src="/static/js/hatebu.js"></script>
   <script type="text/javascript" src="/static/js/index.js"></script>
   <script type="text/javascript">
