リンク消した

--- a/static/index.html
+++ b/static/index.html
@@ -194,7 +194,7 @@
           <a href="javascript:void()" style="display: none;">閉じる</a>
       </div>
       <ul class="space-link-list manage-list" data-track-name="left-menu-space-manage-click" data-track-selector="a" data-track-once="">
-        <li class="link-list-new-topic destroy"><a href="/~/14290830716932572337/+board">トピックをこわす</a></li>
+        <li class="link-list-new-topic destroy"><a href="#">トピックをこわす</a></li>
           <li class="link-list-new-topic"><a href="/~/14290830716932572337/+news">フィードを設定する</a></li>
         <li class="link-list-invite"><a href="/~/14290830716932572337/invite" rel="nofollow">招待する</a></li>
         <li class="link-list-setting"><a href="/~/14290830716932572337/manage">スペースの設定</a></li>
