--- a/static/index.html
+++ b/static/index.html
@@ -201,6 +201,11 @@
       </ul>
     </div>
     <div style="margin-top:30px;">
+      <a href="http://www.typhoonmart.com/products/detail.php?product_id=136">
+        <img src="/static/img/sunglass.png" width="190">
+      </a>
+    </div>
+    <div style="margin-top:30px;">
       <a href="http://atnd.org/events/52857">
         <img src="/static/img/tatakare.jpg" width="190" height="190">
       </a>
