--- a/static/index.html
+++ b/static/index.html
@@ -625,6 +625,7 @@
   <script type="text/javascript" src="/static/js/youtube.js"></script>
   <script type="text/javascript" src="/static/js/jquery.easing.1.3.js"></script>
   <script type="text/javascript" src="/static/js/mouse.js"></script>
+  <script type="text/javascript" src="/static/js/jquery-kabuki.js"></script>
   <script type="text/javascript" src="/static/js/jquery-css-transform.js"></script>
   <script type="text/javascript" src="/static/js/jquery-animate-css-rotate-scale.js"></script>
   <script type="text/javascript" src="/static/js/destroy.js"></script>
