--- a/static/index.html
+++ b/static/index.html
@@ -201,12 +201,12 @@
       </ul>
     </div>
     <div style="margin-top:30px;">
-      <a href="http://www.typhoonmart.com/products/detail.php?product_id=136">
+      <a href="http://www.typhoonmart.com/products/detail.php?product_id=136" target="_blank">
         <img src="/static/img/sunglass.png" width="190">
       </a>
     </div>
     <div style="margin-top:30px;">
-      <a href="http://atnd.org/events/52857">
+      <a href="http://atnd.org/events/52857" target="_blank">
         <img src="/static/img/tatakare.jpg" width="190" height="190">
       </a>
     </div>
@@ -230,6 +230,7 @@
     <div class="container">
       <div class="topic-header">
         <div class="topic-title-container">
+          <img src="/static/img/dummy.jpg" width="538" />
           <h1 class="topic-title" title="企画・匿名・ネット参加"><a href="/~/14290830716932572337/14218542507645886522">企画・匿名・ネット参加</a></h1>
         </div>
         <div class="topic-description">
