--- a/static/index.html
+++ b/static/index.html
@@ -242,6 +242,7 @@
     <div class="container">
       <div class="topic-header">
         <div class="topic-title-container">
+          <img src="/static/img/ttl_import.gif" width="538">
           <img src="/static/img/dummy.jpg" width="538" />
           <h1 class="topic-title" title="企画・匿名・ネット参加"><a href="/~/14290830716932572337/14218542507645886522">企画・匿名・ネット参加</a></h1>
         </div>
