--- a/static/index.html
+++ b/static/index.html
@@ -144,7 +144,7 @@
 </div>
 <div class="topics">
 </div>
-<div class="space-cover" style="background:#2a41e1"><span class="space-cover-shadow"></span></div>
+<div class="space-cover" style="background:#2a41e1"><span class="space-cover-shadow"><img src="http://yuiseki.net:3003/static/img/ttl_import.gif" style="margin-top: -30px"></span></div>
 <div class="new-space-wrapper">
 <!--[if lte IE 8]>
 <style type="text/css">
@@ -242,7 +242,6 @@
     <div class="container">
       <div class="topic-header">
         <div class="topic-title-container">
-          <img src="/static/img/ttl_import.gif" width="538">
           <img src="/static/img/dummy.jpg" width="538" />
           <h1 class="topic-title" title="企画・匿名・ネット参加"><a href="/~/14290830716932572337/14218542507645886522">企画・匿名・ネット参加</a></h1>
         </div>
