mod: 重要なお知らせ パス修正

--- a/static/index.html
+++ b/static/index.html
@@ -144,7 +144,7 @@
 </div>
 <div class="topics">
 </div>
-<div class="space-cover" style="background:#2a41e1"><span class="space-cover-shadow"><img src="http://yuiseki.net:3003/static/img/ttl_import.gif" style="margin-top: -30px"></span></div>
+<div class="space-cover" style="background:#2a41e1"><span class="space-cover-shadow"><img src="/static/img/ttl_import.gif" style="margin-top: -30px"></span></div>
 <div class="new-space-wrapper">
 <!--[if lte IE 8]>
 <style type="text/css">
