--- a/static/index.html
+++ b/static/index.html
@@ -2,11 +2,11 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,user-scalable=0">
   <title>はてなブックマーク・ユーザー会オフラインミーティング(07/12) - はてブオフ会</title>
-  <link rel="stylesheet" href="http://space.hatena.ne.jp/css/master.css?d00e688c">
-  <link rel="stylesheet" href="http://space.hatena.ne.jp/css/lib/jquery.jscrollpane.css">
-  <link rel="stylesheet" href="http://space.hatena.ne.jp/css/lib/jquery.powertip.css">
+  <link rel="stylesheet" href="/static/css/master.css">
+  <link rel="stylesheet" href="/static/css/jquery.jscrollpane.css">
+  <link rel="stylesheet" href="/static/css/jquery.powertip.css">
   <!-- Global Header -->
-  <link rel="stylesheet" href="//cdn.www.st-hatena.com/css/hatena/header.css" type="text/css" media="all">
+  <link rel="stylesheet" href="/static/css/header.css" type="text/css" media="all">
   <style type="text/css">
     html, body {
       padding: 0;
