全部斎藤の画像にしようと思って

--- a/static/index.html
+++ b/static/index.html
@@ -161,7 +161,7 @@
     </div>
     <div class="container">
       <h1><a href="/~/14290830716932572337" data-track-name="left-space-name-click" data-track-once="">はてなブックマーク・ユーザー会オフラインミーティング(07/12)</a></h1>
-      <div class="private-icon"><img src="/images/padlock-v3.png" alt="プライベートスペースです"></div>
+      <div class="private-icon"><img src="http://cdn7.www.st-hatena.com/users/ne/netcraft/profile.gif?1387856453" alt="プライベートスペースです"></div>
           <p class="joined">スペースに参加中です</p>
       <ul class="space-data">
         <li>
@@ -173,7 +173,7 @@
           <strong class="space-data-num">9999</strong><span class="space-data-label">投稿</span>
         </li>
       </ul>
-      <h3><img src="/images/topic_image_icon@2x.png" alt="" class="topic-image-icon">トピックス</h3>
+      <h3><img src="http://cdn7.www.st-hatena.com/users/ne/netcraft/profile.gif?1387856453" alt="" class="topic-image-icon">トピックス</h3>
       <ul class="board-list" data-track-name="left-menu-switch-topic-click" data-track-selector="a">
           <li class="" >
             <a href="#description" title="開催概要">開催概要</a>
