mod: 画像差し替え

--- a/static/index.html
+++ b/static/index.html
@@ -386,7 +386,7 @@
   </div>
   <div class="body">
     <div class="plain">
-      うんこについて話しあいましょう
+      <img src="http://37.media.tumblr.com/676bc4f46a8cd5007044edd357424243/tumblr_mz0pxlVPm31qavye5o1_1280.jpg" width="500" />
     </div>
   </div>
   <div class="reply-action">
@@ -427,7 +427,7 @@
               コウモリ <span class="username">id:Rlee1984</span>
             </span></a>
             <div class="plain">
-              うんこはにがくてうまい
+              <img src="http://37.media.tumblr.com/bba3dcc99a1f4e0c952ebb41c73ca04f/tumblr_mxctnx0rks1s6w3hlo1_400.gif" />
             </div>
             <div class="comment-data">
               <time data-epoch-milliseconds="1403831887000">9日前</time>
