タイトル変えた

--- a/static/index.html
+++ b/static/index.html
@@ -1,7 +1,7 @@
 ﻿<html id="html" class="window">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,user-scalable=0">
-  <title>はてなブックマーク・ユーザー会オフラインミーティング(07/12) - はてブオフ会</title>
+  <title>はてなブックマーク・ユーザー会オフラインミーティング(07/12) - はてブスペース</title>
   <link rel="stylesheet" href="/static/css/master.css">
   <link rel="stylesheet" href="/static/css/jquery.jscrollpane.css">
   <link rel="stylesheet" href="/static/css/jquery.powertip.css">
