ヘッダーのリンクはrainbowさせたくない

--- a/static/index.html
+++ b/static/index.html
@@ -115,14 +115,14 @@
             <img src="/static/img/hatebuoff_png.png" alt="Hatena Space"></a></div>
         <ul class="service-menu">
           <li class="space-menu">
-          <a href="/user/netcraft" data-track-name="global-header-my-page-click" data-track-once="">
+          <a href="/user/netcraft" class="skip">
             <img src="http://cdn7.www.st-hatena.com/users/ne/netcraft/profile_s.gif?1387856453" alt="netcraft" class="profile-image">プロフィール</a>
           </li>
           <li class="space-menu">
-            <a href="javascript:destroy();">スペースをこわす</a>
+            <a href="javascript:destroy();" class="skip">スペースをこわす</a>
           </li>
           <li class="space-menu">
-            <a href="/users">参加者一覧</a>
+            <a href="/users" class="skip">参加者一覧</a>
           </li>
           <li class="header-username" id="header-username" data-name="hoge" data-track-name="global-header-icon-service-click" data-track-once="" data-track-selector="img">
             <span class="header-dropdown" tabindex="0">
