はてブしてください

--- a/static/index.html
+++ b/static/index.html
@@ -1,6 +1,7 @@
 ﻿<html id="html" class="window">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,user-scalable=0">
+  <meta name="description" content="はてブしてください">
   <title>はてなブックマーク・ユーザー会オフラインミーティング(07/12) - はてブスペース</title>
   <link rel="stylesheet" href="/static/css/master.css">
   <link rel="stylesheet" href="/static/css/jquery.jscrollpane.css">
