--- a/static/index.html
+++ b/static/index.html
@@ -161,7 +161,7 @@
 <nav class="space-sidebar">
     <div class="space-header-container" style="position: fixed; width: 200px; top: 45.99431610107422px; left: 66.81817626953125px;">
     <div class="space-image">
-      <a href="/~/14290830716932572337" title="はてなブックマーク・ユーザー会オフラインミーティング(07/12)" data-track-name="left-space-icon-click" data-track-once=""><img src="http://cdn.image.st-hatena.com/image/square/d0011c4c15d8cbfd78dedef6301dd21aca55484d/enlarge=0;height=360;version=1;width=360/http%3A%2F%2Fcdn.mogile.archive.st-hatena.com%2Fv1%2Fimage%2Fsabacurry%2Foriginal%2F302452539313090798.jpg" alt="はてなブックマーク・ユーザー会オフラインミーティング(07/12)"></a>
+      <a href="http://space.hatena.ne.jp/~/14290830716932572337" title="はてなブックマーク・ユーザー会オフラインミーティング(07/12)" data-track-name="left-space-icon-click" data-track-once=""><img src="http://cdn.image.st-hatena.com/image/square/d0011c4c15d8cbfd78dedef6301dd21aca55484d/enlarge=0;height=360;version=1;width=360/http%3A%2F%2Fcdn.mogile.archive.st-hatena.com%2Fv1%2Fimage%2Fsabacurry%2Foriginal%2F302452539313090798.jpg" alt="はてなブックマーク・ユーザー会オフラインミーティング(07/12)"></a>
     </div>
     <div class="container">
       <h1><a href="/~/14290830716932572337" data-track-name="left-space-name-click" data-track-once="">はてなブックマーク・ユーザー会オフラインミーティング(07/12)</a></h1>
