アルバム更新

--- a/static/index.html
+++ b/static/index.html
@@ -512,6 +512,15 @@
       </div>
       <h2>このスペースに投稿された画像</h2>
       <ul data-track-name="space-sidebar-album-click" data-track-once="" data-track-selector="a">
+        <li>
+          <a href="javascript:void()"
+             style="background-image:url(/static/img/Martian_face_viking_cropped.jpg)"> </a>
+        </li>
+        <li>
+          <a href="javascript:void()"
+             style="background-image:url(/static/img/imagesCA3DEVKA.jpg)"> </a>
+        </li>
+            <li><a href="javascript:void()" style="background-image:url(/static/img/imagesCA3DEVKA.jpg)"> </a></li>
             <li><a href="/~/14290830716932572337/14290830716932572375/60" style="background-image:url(http://cdn.image.st-hatena.com/image/square/974a24debadd92cae550a8cef8f79e556fd48795/enlarge=0;height=140;version=1;width=140/http%3A%2F%2Ff.st-hatena.com%2Fimages%2Ffotolife%2Fk%2Fkiku-chan%2F20140706%2F20140706192425.jpg)"> </a></li>
             <li><a href="/~/14290830716932572337/14218542507645879453/15" style="background-image:url(http://cdn.image.st-hatena.com/image/square/03ae7d6294362a9b1279463bc7c127c71f41750d/enlarge=0;height=140;version=1;width=140/http%3A%2F%2Fcdn.mogile.archive.st-hatena.com%2Fv1%2Fimage%2Fpero_pero%2F302452589019459876.jpg)"> </a></li>
             <li><a href="/~/14290830716932572337/14290830716932582131/6" style="background-image:url(http://cdn.image.st-hatena.com/image/square/de588f89f28f386b219662d0b022a1e1a453d21b/enlarge=0;height=140;version=1;width=140/http%3A%2F%2Fcdn.mogile.archive.st-hatena.com%2Fv1%2Fimage%2Fnetcraft%2F297790633221591524.jpg)"> </a></li>
