list-style saito

--- a/static/index.html
+++ b/static/index.html
@@ -71,6 +71,9 @@
     div.new-space-wrapper div{
       background-color: rgba(255,255,255,0.5);
     }
+    div.new-space-wrapper li{
+      list-style:url(http://cdn7.www.st-hatena.com/users/ne/netcraft/profile_s.gif);
+    }
     .topic .container {
       border: none !important;
     }
@@ -524,9 +527,7 @@
             <li><a href="/~/14290830716932572337/14218542507645879453/15" style="background-image:url(http://cdn.image.st-hatena.com/image/square/03ae7d6294362a9b1279463bc7c127c71f41750d/enlarge=0;height=140;version=1;width=140/http%3A%2F%2Fcdn.mogile.archive.st-hatena.com%2Fv1%2Fimage%2Fpero_pero%2F302452589019459876.jpg)"> </a></li>
             <li><a href="/~/14290830716932572337/14290830716932582131/6" style="background-image:url(http://cdn.image.st-hatena.com/image/square/de588f89f28f386b219662d0b022a1e1a453d21b/enlarge=0;height=140;version=1;width=140/http%3A%2F%2Fcdn.mogile.archive.st-hatena.com%2Fv1%2Fimage%2Fnetcraft%2F297790633221591524.jpg)"> </a></li>
             <li><a href="/~/14290830716932572337/14290830716932582131/5" style="background-image:url(http://cdn.image.st-hatena.com/image/square/469cfb960bb859d7441868dafb916f2f3e0e85ed/enlarge=0;height=140;version=1;width=140/http%3A%2F%2Fcdn.mogile.archive.st-hatena.com%2Fv1%2Fimage%2Fpero_pero%2F302452233337398247.jpg)"> </a></li>
-            <li><a href="/~/14290830716932572337/14290830716932572375/50" style="background-image:url(http://cdn.image.st-hatena.com/image/square/47641465721085e113e3b998e86107230aa367ce/enlarge=0;height=140;version=1;width=140/http%3A%2F%2Fcdn.mogile.archive.st-hatena.com%2Fv1%2Fimage%2Fpero_pero%2F297790548070954163.jpg)"> </a></li>
             <li><a href="/~/14290830716932572337/14290830716932582131/1" style="background-image:url(http://cdn.image.st-hatena.com/image/square/8c1558a1040af81e40210a021bd104a13782e600/enlarge=0;height=140;version=1;width=140/http%3A%2F%2Fcdn.mogile.archive.st-hatena.com%2Fv1%2Fimage%2Fpero_pero%2F297790252967475971.jpg)"> </a></li>
-            <li><a href="/~/14290830716932572337/14218542507645877817/8" style="background-image:url(http://cdn.image.st-hatena.com/image/square/b95acf1be94e656456c68ee431b2f9ef6dfd1d4a/enlarge=0;height=140;version=1;width=140/http%3A%2F%2Fi.gyazo.com%2Fca4013d5243457b0f80a9301be696378.png)"> </a></li>
       </ul>
       <p class="show-all" data-track-name="space-sidebar-album-click" data-track-once="" data-track-selector="a"><a href="/~/14290830716932572337/album">もっと見る</a></p>
     </section>
